--- a/nlp.html
+++ b/nlp.html
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1934377'>Job Application for Senior Research Scientist- AllenNLP at The Allen Institute for Artificial Intelligence</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1934377'>Job Application for Senior Research Scientist- AllenNLP at The Allen Institute for Artificial Intelligence</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -91,7 +91,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='http://wysdomai.applytojob.com/apply/saWuLwJyCH/NLPML-Developer'>NLP/ML Developer - Wysdom.AI - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://wysdomai.applytojob.com/apply/saWuLwJyCH/NLPML-Developer'>NLP/ML Developer - Wysdom.AI - Career Page</a></h5> 
 <p><span class="badge badge-light">Richmond Ontario, Canada</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -149,7 +149,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk0jhff/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk0jhff/'>
     Software Developer?Natural Language Processing  at Wolfram
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -183,7 +183,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-29</p>
 <hr/>
-<h5><a href='https://snap.hr/babylon-health/job/nlp-software-engineer/02ebe764cf46613e74f7555d3310dbb5/'>NLP Software Engineer at Babylon Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/babylon-health/job/nlp-software-engineer/02ebe764cf46613e74f7555d3310dbb5/'>NLP Software Engineer at Babylon Health</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
@@ -252,7 +252,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<h5><a href='https://knorex.workable.com/j/4330353C58'>KNOREX - Jobs: Research Scientist (NLP) - Python, Java - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://knorex.workable.com/j/4330353C58'>KNOREX - Jobs: Research Scientist (NLP) - Python, Java - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -264,7 +264,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='https://thematic.workable.com/j/6F11552079'>Thematic - Jobs: Senior Data Scientist NLP - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thematic.workable.com/j/6F11552079'>Thematic - Jobs: Senior Data Scientist NLP - Apply online</a></h5> 
 <p><span class="badge badge-light">New Zealand Auckland</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -360,7 +360,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/foundersfactory/85f00bc9-de99-4b99-b11e-173d9fb95065'>Founders Factory - Data Scientist NLP (Entale)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/foundersfactory/85f00bc9-de99-4b99-b11e-173d9fb95065'>Founders Factory - Data Scientist NLP (Entale)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 15, 2019 ... Data Scientist NLP (Entale). London, United Kingdom. Accelerator ? Engineering
 . Full-time. Apply for this job. We are looking for a talented Data Scientist to?...</p>
@@ -416,7 +416,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/researcher-nlp-rit-9762'>Researcher (NLP) : RIT - Rakuten Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/researcher-nlp-rit-9762'>Researcher (NLP) : RIT - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Some of the research projects can involve parsing, language modelling, machine 
 translation, sentiment analysis, recommendation systems, deep learning,?...</p>
@@ -427,7 +427,7 @@ translation, sentiment analysis, recommendation systems, deep learning,?...</p>
 GumGum enables highly impactful digital advertising campaigns with contextual
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114451-thesis-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Thesis in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114451-thesis-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Thesis in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
